2008-12-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/freeze/ccm-freeze.c (ccm_freeze_init),
	(ccm_freeze_finalize), (ccm_freeze_on_event), (ccm_freeze_get_pid),
	(ccm_freeze_ping), (ccm_freeze_load_options), (ccm_freeze_paint),
	(ccm_freeze_map), (ccm_freeze_unmap), (ccm_freeze_add_window):
	* plugins/freeze/ccm-freeze.h:
	* plugins/freeze/ccm-freeze.schemas.in:
	  - Only ping application which have _NET_WM_PID atom
	  - Add color freeze option
	  - Some fix
	* data/cairo-compmgr.schemas.in:
	  - Enable by default decoration and freeze plugins
	* plugins/magnifier/ccm-magnifier.c
	(ccm_magnifier_cursor_get_surface):
	  - Don't draw animated cursor
	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
	* src/ccm-screen.c (ccm_screen_paint):
	  - Fix to work with latest glitz snapshot.

2008-11-26  Nicolas Bruguier  <gandalfn@club-internet.fr>

	* plugins/decoration/ccm-decoration.c (ccm_decoration_init),
	(ccm_decoration_finalize), (ccm_decoration_on_option_changed),
	(ccm_decoration_on_property_changed),
	(ccm_decoration_on_opacity_changed),
	(ccm_decoration_window_load_options), (ccm_decoration_create_mask),
	(ccm_decoration_window_query_geometry):
	* plugins/decoration/ccm-decoration.schemas.in:
	  - Use similar surface instead image surface.
	  - Fix crash on load/unload.
	  - Remove blur option.
	* src/ccm-plugin.c (ccm_plugin_finalize):
	  - Set parent to null on unref.
	* src/ccm-screen.c (ccm_screen_print_stack):
	  - Fix typo
	* src/ccm-window.c (ccm_window_query_frame_extends),
	(ccm_window_get_property), (ccm_window_get_child_property):
	  - Use gulong instead guint32 on get property to have the correct size on
	    64 bits platform.
	* src/ccm-pixmap-glitz.c (ccm_pixmap_glitz_create_gl_drawable):
	* src/ccm-window-glitz.c (ccm_window_glitz_create_gl_drawable),
	(ccm_window_glitz_create_pixmap):
	  - Fix glitz format selection need uncommited release of glitz.

2008-11-24  Nicolas Bruguier  <gandalfn@club-internet.fr>
